<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_cashflow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/my_margin"
    android:layout_marginTop="@dimen/my_margin"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/my_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardLabel_cashflow"
            android:textStyle="bold" />

        <include
            layout="@layout/view_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/cashflow_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="99.99"
                    android:textColor="@color/income"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/view_bar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/cashflow_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="99.99"
                    android:textColor="@color/expense"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/view_bar" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>